clang-tblgen wip コンパイルだけ通した ならべなおした

--- a/llvm/CMakeLists.txt
+++ b/llvm/CMakeLists.txt
@@ -918,7 +918,7 @@ if( MINGW AND NOT "${CMAKE_CXX_COMPILER_ID}" MATCHES "Clang" )
   llvm_replace_compiler_option(CMAKE_CXX_FLAGS_RELEASE "-O3" "-O2")
 endif()
 
-set(LLVM_ENABLE_TABLEGEN_MODULARIZED ON)
+set(LLVM_ENABLE_TABLEGEN_MODULARIZED OFF)
 
 # Put this before tblgen. Else we have a circular dependence.
 add_subdirectory(lib/Demangle)
