wip tblgen を anchor_all から除外。

--- a/llvm/CMakeLists.txt
+++ b/llvm/CMakeLists.txt
@@ -936,7 +936,7 @@ if (LLVM_ENABLE_MODULES)
     #XXXPRESCAN ON
     )
 
-  list(APPEND LLVM_COMMON_DEPENDS anchor_all)
+  #list(APPEND LLVM_COMMON_DEPENDS anchor_all)
 
   set(CMAKE_CXX_EXPERIMENTAL_PRESCANNER
     "/home/chapuni/llvm/install/2libcxx/bin/clang-scan-deps --mode=preprocess-minimized-sources -j=1 --reuse-filemanager --format=ninja"
